<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relative_layout_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progress_main_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="96dp"
            android:indeterminateTint="@color/colorWhite"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone" />

        <TextView
            android:id="@+id/project_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp"
            android:background="@color/colorTransparent"
            android:text="@string/project_version"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/project_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@color/colorTransparent"
            android:text="@string/project_authors"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />


        <RelativeLayout
            android:id="@+id/project_login"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="105dp"
            android:background="@drawable/button_login"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/project_login_icon"
                android:layout_width="67dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginStart="60dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/ic_imgur_logo" />

            <TextView
                android:id="@+id/project_login_text"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="60dp"
                android:gravity="center"
                android:text="@string/project_login"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>