<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".items.CameraActivity"
    tools:showIn="@layout/activity_camera">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/colorGrayLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:elevation="4dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:dividerHeight="0.0px"
            android:clipToPadding="false"
            android:clipChildren="false"
            card_view:cardElevation="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            card_view:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/card_view_background"
                    android:layout_width="389dp"
                    android:layout_height="220dp"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="0dp"
                    android:padding="0dp"
                    android:src="@drawable/screen_camera" />

                <TextView
                    android:id="@+id/card_view_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:paddingTop="10dp"
                    android:text="@string/upload_information"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:id="@+id/take_picture"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:elevation="3dp"
                    android:dividerHeight="0.0px"
                    android:clipToPadding="false"
                    android:clipChildren="false"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_upload"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_camera_card"
                            android:tintMode="src_atop"
                            android:layout_marginStart="22dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/upload_take_picture"
                            android:layout_marginStart="20dp"
                            android:textSize="16sp"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/import_picture"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:elevation="3dp"
                    android:dividerHeight="0.0px"
                    android:clipToPadding="false"
                    android:clipChildren="false"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_upload">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/ic_upload" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="20dp"
                            android:text="@string/upload_import_picture"
                            android:textSize="16sp" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>